feat: implement free disk feature
